<?xml version="1.0"?>
<package format="3">
  <name>spi_bridge</name>
  <version>0.1.0</version>
  <description>SPI bridge node for Raspberry Pi ↔ Nucleo F446RE (Mbed CE) with ROS 2 Jazzy.</description>

  <maintainer email="you@example.com">Your Name</maintainer>
  <license>MIT</license>

  <buildtool_depend>ament_python</buildtool_depend>

  <depend>rclpy</depend>
  <depend>std_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>sensor_msgs</depend>
  <depend>diagnostic_msgs</depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
